@@ -1,3 +1,8 @@
+2008-01-12 Borut Razem <borut.razem AT siol.net>
+
+	* packages/build.nsis/Makefile: updated to NSIS version 2.34
+	* crontab.txt: execute .bash_profile instead of .bashrc on cf-x86
+
 2007-09-03 Borut Razem <borut.razem AT siol.net>
 
 	* packages/build.gputils/Makefile: get gputils sources from CVS
